# Kaidan

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  clickable.json
utils/: build-click.sh  build-ios.sh  build-mac.sh  build-ubuntu-touch.sh  ci-build.sh  travis-dependencies.sh
